FHSL Plantões Médicos V 2.5.2

--- a/Front/FrontPlantoesMedicos/public/index.html
+++ b/Front/FrontPlantoesMedicos/public/index.html
@@ -6,7 +6,7 @@
   <link rel="shortcut icon" href="https://fhsl.org.br/img/icon-512.png">
   <link rel="apple-touch-icon" href="https://fhsl.org.br/img/icon-512.png">
   <link rel="stylesheet" type="text/css" href="./style.css" />
-  <title>Ponto Plantões</title>
+  <title>Gestor de Plantões</title>
 </head>
 <body>
   <div class= "root" id="root"></div>
